--- a/src/container/js.hbs
+++ b/src/container/js.hbs
@@ -19,6 +19,7 @@
                 <ol>
                     {{this}}
                 </ol>
+                <button type="button" class="btn btn-primary">Primary</button>
                 {{/each}}
             </ul>
     </section>
@@ -32,6 +33,7 @@
                     <div>{{variables}}</div><div>{{functions}}</div>
                     <div>{{conditionals}}</div><div>{{loops}}</div>
                     <div>{{classes}}</div>
+                    <button type="button" class="btn btn-secondary">Secondary</button>
                 </ul>
             {{/with}}
         </div>
@@ -45,6 +47,7 @@
                 <ol>
                     {{this}}
                 </ol>
+                <button type="button" class="btn btn-success">Success</button>
                 {{/each}}
             </ul>
     </section>
@@ -57,6 +60,7 @@
                 <ol>
                     {{this}}
                 </ol>
+                <button type="button" class="btn btn-danger">Danger</button>
                 {{/each}}
             </ul>
     </section>
@@ -69,6 +73,7 @@
                 <ol>
                     {{this}}
                 </ol>
+                <button type="button" class="btn btn-warning">Warning</button>
                 {{/each}}
             </ul>
     </section>
