--- a/src/container/js.hbs
+++ b/src/container/js.hbs
@@ -33,7 +33,7 @@
                     <div>{{variables}}</div><div>{{functions}}</div>
                     <div>{{conditionals}}</div><div>{{loops}}</div>
                     <div>{{classes}}</div>
-                    <button type="button" class="btn btn-secondary">Secondary</button>
+                    <input class="btn btn-primary" type="submit" value="Submit">
                 </ul>
             {{/with}}
         </div>
@@ -85,6 +85,7 @@
                 <ul>
                     <div>{{name}}</div><div>{{type}}</div>
                 </ul>
+                <a class="btn btn-primary disabled" role="button" aria-disabled="true">Primary link</a>
             {{/each}}
         </div>
     </section>
