--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,23 +1,128 @@
 <main>
-    <h1 class='text-center'>Hello world</h1>
-    <h2 class='text-end'>Second</h2>
-    <h3 class='text-capitalize'>3 title</h3>
+    <div class="row g-5">
+        <section class="col-12">
+            <div class="card text-bg-dark">
+                <img class="card-img-top" src="https://picsum.photos/400/200" alt="Product photo">
+                <div class="card-body">
+                    <h5 class="card-title text-bg-primary">Produkt #6969</h5>
+                    <p class="text-bg-secondary">USB hub <br> type c 12 v 1</p>
+                    <a href="#" class="btn btn-primary">Open</a>
+                </div>
+            </div>
+        </section>
 
-    <hr>
+        <section class="col-3">
+            <div class="card">
+                <div class="card-header">
+                    <div>Menu</div>
+                </div>
 
-    <div class='display-1 text-muted'>Hello world</div>
-    <div class='display-1 text-center'>Second</div>
-    <div class='display-3 text-end'> title</div>
+                <ul class="lits-group list-group-flush">
+                    <li class="lits-group-item">
+                        <a href="#" class="btn btn-link">Home page</a>
+                    </li>
+                    <li class="lits-group-item">
+                        <a href="#" class="btn btn-link">Suumery page</a>
+                    </li>
+                    <li class="lits-group-item">
+                        <a href="#" class="btn btn-link">Skills page</a>
+                    </li>
+                </ul>
 
-    <hr>
+                <div class="card-footer">
+                    <button class="btn btn-dark btn-sm">Update list</button>
+                </div>
+            </div>
+        </section>
 
-    <div class="text-end">
-        <span class=' display-6 text-muted'>Додатковий  текст</span>
+        <section class="col-9">
+           <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>
+                        #id
+                    </th>
+                    <th>
+                       name
+                    </th>
+                    <th>
+                        age
+                    </th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <th>jhon</th>
+                    <th>35</th>
+                </tr>
+                <tr>
+                    <th>1</th>
+                    <th>jhon</th>
+                    <th>35</th>
+                </tr>
+                <tr>
+                    <th>1</th>
+                    <th>jhon</th>
+                    <th>35</th>
+                </tr>
+                <tr>
+                    <th>1</th>
+                    <th>jhon</th>
+                    <th>35</th>
+                </tr>
+            </tbody>
+           </table>
+        </section>
+
+        <section class="col-12">
+            <div class="row g-2">
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center"></div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center"></div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center"></div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center"></div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-
-    <hr>
-
-    <button class="btn btn-success">
-        Test buton
-    </button>
 </main>
