--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,4 +1,4 @@
-<main>
+<main class="p-5">
     <div class="row g-5">
         <section class="col-12">
             <div class="card text-bg-dark">
@@ -126,3 +126,119 @@
         </section>
     </div>
 </main>
+<br>
+<hr>
+<hr>
+<hr>
+<br>
+<main class="p-5">
+    <div class="row">
+        <div class="col-12 mb-5">
+            <div class="nav nav-tabs">
+                <div class="nav-item">
+                    <a href="#" class="nav-link active">Main</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link">Catalog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link">Shop list</a>
+                </div>
+            </div>
+        </div>    
+
+
+        <div class="col-4">
+            <div class="card">
+                <div class="pt-4 pb-3 px-4">
+                    <div class="nav flex-column">
+                        <div class="nav-item mb-2">
+                            <div class="card">
+                                <a href="/summary" class="nav-link">Home page</a>
+                            </div>
+                        </div>
+                        <div class="nav-item mb-2">
+                            <div class="card">
+                                <a href="#" class="nav-link disabled">Bootstrap</a>
+                            </div>
+                        </div>
+                        <div class="nav-item mb-2">
+                            <div class="card">
+                                <a href="web" class="nav-link">PQA page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-8">
+            <div class="row">
+                <div class="col-12">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#">PC та ноутбук</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            Ноутбук ASUS
+                        </li>
+                    </ol>
+                </div>
+                
+                <div class="col-12">
+                    <button class="btn btn-primary rounded-pill mb-3">Click me</button>
+                    <div class="alert alert-info">
+                        <h6>
+                            Довідник по HTML тегам <span class="badge text-bg-warning rounded-pill text-uppercase">Топ продаж</span>
+                        </h6>                    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
