--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -4,9 +4,9 @@
             <div class="card text-bg-dark">
                 <img class="card-img-top" src="https://picsum.photos/400/200" alt="Product photo">
                 <div class="card-body">
-                    <h5 class="card-title text-bg-primary">Produkt #6969</h5>
+                    <h5 class="card-title text-bg-secondary">Produkt #6969</h5>
                     <p class="text-bg-secondary">USB hub <br> type c 12 v 1</p>
-                    <a href="#" class="btn btn-primary">Open</a>
+                    <a href="#" class="btn btn-secondary">Open</a>
                 </div>
             </div>
         </section>
