--- a/src/component/footer.hbs
+++ b/src/component/footer.hbs
@@ -1,7 +1,10 @@
 {{#with footer}}
+		<hr class="my-5">
+
+
 		<footer>
-			<hr>
-			<br>
+			
+			
 			<div>
 				{{#with social}}            
 					{{> link text=email.text href=email.href blank=true }}
@@ -9,11 +12,11 @@
 					{{> link text=linkedin.text href=linkedin.href blank=true }} 
 				{{/with}}
 			</div>
-			<br>
-			<div>
+			
+			<div class="my-3">
 				<em>Copyright by {{../header/name/firstname}} {{../header/name/lastname}}</em>
 			</div>   
-			<br>
+			
 			<div>
 				<address>{{../header/address}}</address>
 			</div>
