--- a/src/layout/shop.hbs
+++ b/src/layout/shop.hbs
@@ -3,7 +3,7 @@
   І котрий обгортає код container файлів для будь-яких ендпоїнтів
 --}}
 <!DOCTYPE html>
-<html>
+<html class="p-5">
 
   <head>
     <title>
