--- a/src/container/shopreview.hbs
+++ b/src/container/shopreview.hbs
@@ -113,6 +113,64 @@
             </div>
             {{/with}}
         </div>
+        <hr>
+        <div class="mb-5">
+            {{#each reviewList}}
+                <div class="card row">
+                    <div class="card-body col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-body">
+                                    {{#with title}}
+                                        <div><b>{{userName}}</b></div>
+                                        <div>{{caption}}</div>
+                                        <div class="mt-3">{{date}}</div>
+                                    {{/with}}
+                                </div>
+                            </div>
+                            </div>
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <div>
+                                        {{#with reviewBody.seller}}
+                                            <div class="mb-3">{{title}}: {{value}}</div>
+                                        {{/with}}
+                                    </div>
+                                    <div>
+                                        {{#with reviewBody.rating}}
+                                            <div class="mb-3">{{title}}: {{value}}</div>
+                                        {{/with}}
+                                        <div class="mb-3">{{reviewBody.text}}</div>
+                                    </div>
+                                    <div class="mb-3">
+                                        {{#with reviewBody.advantages}}
+                                            <div><b>{{title}}:</b></div><div>{{text}}</div>
+                                        {{/with}}
+                                    </div>
+                                    <div class="mb-3">
+                                        {{#with reviewBody.disadvantages}}
+                                            <div><b>{{title}}:</b></div><div>{{text}}</div>
+                                        {{/with}}
+                                    </div>
+                                        <img src="{{reviewBody.images}}">
+                                </div>
+                            </div>
+                                <div>
+                                    {{#each reviewBody.coments}}
+                                    <div class="card ms-5 mb-3">
+                                        <div class="card-body">
+                                            <div class="mb-3"><b>{{userName}}</b></div>
+                                            <div>{{date}}</div>
+                                            <div class="mt-3">{{text}}</div>
+                                        </div>
+                                    </div>
+                                    {{/each}}
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            {{/each}}
+        </div>
         <hr class="mt-5 mb-5">  
             {{#with service}}
                 <div class="col-12 mt-5">
