--- a/src/layout/bootstrap.hbs
+++ b/src/layout/bootstrap.hbs
@@ -6,12 +6,22 @@
       {{page.title}}
     </title>
     <meta charset='utf-8' />
+    <link href='css/normalize.css' rel='stylesheet' />
+
     <link href='css/index.css' rel='stylesheet' />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 			integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
+      <link href='css/style.css' rel='stylesheet' />
+
+      <style>
+        h1 {
+            color: green;
+        }
+      </style>
   </head>
 
   <body>	
@@ -21,5 +31,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
+
+  
 
 </html>
