--- a/src/container/car.hbs
+++ b/src/container/car.hbs
@@ -2,146 +2,147 @@
 Це код container файлу для summary сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
-
-<div class="p-5">
-    <h1><div>Toyota</div><div>Camry</div></h1>
-    <h2><div>2022</div><div>silver</div></h2>
-    
-    <hr>
-    {{#with features}}
-        <main>
-        <section>
-            {{#with interior}}
-            <ul>
-            {{> title data='Interior' big=true}}
-                {{#with seats}}
-                {{> title data='Seats' big=true}}
-                    <li><div>material: {{material}}</div></li>
-                    <li><div>color: {{color}}</div></li>
-                    <li><div>heated: {{#if heated}} (In stock) {{/if}}</div></li>
-                    <li><div>ventilated: {{#if ventilated}} (In stock) {{/if}}</div></li>
-                {{/with}}
-                </ul>
-                <hr>
+<main class="m-5">
+    <div class="p-5">
+        <h1><div>Toyota</div><div>Camry</div></h1>
+        <h2><div>2022</div><div>silver</div></h2>
+        
+        <hr>
+        {{#with features}}
+            <main>
+            <section>
+                {{#with interior}}
                 <ul>
-                {{> title data='Dashboard'}}
-                {{#with dashboard}}
-                    <li><div>material: {{material}}</div></li>
-                    <li><div>color: {{color}}</div></li>
-                    <br>
-                    {{#with display}}
-                        <div><strong>Display</strong></div>
-                        <li><div>type: {{type}}</div></li>
-                        <li><div>size: {{size}}</div></li>
-                        <li><div>resolution: {{resolution}}</div></li>
-                        <li><div>touchscreen: {{#if touchscreen}} (In stock) {{/if}}</div></li>
-                    {{/with}}
-                {{/with}}
-                </ul>
-                <ul>
-                    {{#with audio}}
-                        <div><strong>Audio</strong></div>
-                        <li><div>system: {{system}}</div></li>
-                        <li><div>speakers: {{speakers}}</div></li>
-                        <li><div>subwoofer: {{#if subwoofer}} (In stock) {{/if}}</div></li>
-                        <li><div>bluetooth: {{#if bluetooth}} (In stock) {{/if}}</div></li>
-                        <li><div>USB: {{#if USB}} (In stock) {{/if}}</div></li>
-                    {{/with}}
-                </ul>
-            {{/with}}
-            <hr>
-            {{#with exterior}}
-            <ul>
-                {{> title data='Exterior' big=true}}
-                    {{#with wheels}}
-                        <div><strong>Wheels</strong></div>
-                        <li><div>size: {{size}}</div></li>
-                        <li><div>type: {{type}}</div></li>
+                {{> title data='Interior' big=true}}
+                    {{#with seats}}
+                    {{> title data='Seats' big=true}}
+                        <li><div>material: {{material}}</div></li>
                         <li><div>color: {{color}}</div></li>
+                        <li><div>heated: {{#if heated}} (In stock) {{/if}}</div></li>
+                        <li><div>ventilated: {{#if ventilated}} (In stock) {{/if}}</div></li>
+                    {{/with}}
+                    </ul>
+                    <hr>
+                    <ul>
+                    {{> title data='Dashboard'}}
+                    {{#with dashboard}}
+                        <li><div>material: {{material}}</div></li>
+                        <li><div>color: {{color}}</div></li>
+                        <br>
+                        {{#with display}}
+                            <div><strong>Display</strong></div>
+                            <li><div>type: {{type}}</div></li>
+                            <li><div>size: {{size}}</div></li>
+                            <li><div>resolution: {{resolution}}</div></li>
+                            <li><div>touchscreen: {{#if touchscreen}} (In stock) {{/if}}</div></li>
+                        {{/with}}
+                    {{/with}}
+                    </ul>
+                    <ul>
+                        {{#with audio}}
+                            <div><strong>Audio</strong></div>
+                            <li><div>system: {{system}}</div></li>
+                            <li><div>speakers: {{speakers}}</div></li>
+                            <li><div>subwoofer: {{#if subwoofer}} (In stock) {{/if}}</div></li>
+                            <li><div>bluetooth: {{#if bluetooth}} (In stock) {{/if}}</div></li>
+                            <li><div>USB: {{#if USB}} (In stock) {{/if}}</div></li>
+                        {{/with}}
+                    </ul>
+                {{/with}}
+                <hr>
+                {{#with exterior}}
+                <ul>
+                    {{> title data='Exterior' big=true}}
+                        {{#with wheels}}
+                            <div><strong>Wheels</strong></div>
+                            <li><div>size: {{size}}</div></li>
+                            <li><div>type: {{type}}</div></li>
+                            <li><div>color: {{color}}</div></li>
+                        {{/with}}
+                        <br>
+                        {{#with headlights}}
+                            <div><strong>Headlights</strong></div>
+                            <li><div>brightness: {{brightness}}</div></li>
+                            <li><div>type: {{type}}</div></li>
+                            <li><div>automatic: {{#if automatic}} (In stock) {{/if}}</div></li>
+                        {{/with}}
+                        <br>
+                        {{#with sunroof}}
+                            <div><strong>Sunroof</strong></div>
+                            <li><div>size: {{size}}</div></li>
+                            <li><div>type: {{type}}</div></li>
+                            <li><div>automatic: {{#if automatic}} (In stock) {{/if}}</div></li>
+                        {{/with}}
+                </ul>
+                {{/with}}
+                <hr>
+                {{#with safety}}
+                <ul>
+                    {{> title data='Safety' big=true}}
+                    {{#with airbags}}
+                        <div><strong>Airbags</strong></div>
+                        <li><div>front: {{front}}</div></li>
+                        <li><div>side: {{side}}</div></li>
+                        <li><div>knee: {{knee}}</div></li>
+                        <li><div>rear: {{rear}}</div></li>
                     {{/with}}
                     <br>
-                    {{#with headlights}}
-                        <div><strong>Headlights</strong></div>
-                        <li><div>brightness: {{brightness}}</div></li>
-                        <li><div>type: {{type}}</div></li>
-                        <li><div>automatic: {{#if automatic}} (In stock) {{/if}}</div></li>
+                    {{#with assistance}}
+                        <div><strong>Assistance</strong></div>
+                        <li><div>blind_spot_monitoring: {{#if blind_spot_monitoring}} (In stock) {{/if}}</div></li>
+                        <li><div>rear_cross_traffic_alert: {{#if rear_cross_traffic_alert}} (In stock) {{/if}}</div></li>
+                        <li><div>lane_departure_warning: {{#if lane_departure_warning}} (In stock) {{/if}}</div></li>
+                        <li><div>adaptive_cruise_control: {{#if adaptive_cruise_control}} (In stock) {{/if}}</div></li>
+                        <li><div>collision_warning: {{#if collision_warning}} (In stock) {{/if}}</div></li>
                     {{/with}}
-                    <br>
-                    {{#with sunroof}}
-                        <div><strong>Sunroof</strong></div>
-                        <li><div>size: {{size}}</div></li>
-                        <li><div>type: {{type}}</div></li>
-                        <li><div>automatic: {{#if automatic}} (In stock) {{/if}}</div></li>
-                    {{/with}}
-            </ul>
-            {{/with}}
-            <hr>
-            {{#with safety}}
-            <ul>
-                {{> title data='Safety' big=true}}
-                {{#with airbags}}
-                    <div><strong>Airbags</strong></div>
-                    <li><div>front: {{front}}</div></li>
-                    <li><div>side: {{side}}</div></li>
-                    <li><div>knee: {{knee}}</div></li>
-                    <li><div>rear: {{rear}}</div></li>
+                </ul>
                 {{/with}}
-                <br>
-                {{#with assistance}}
-                    <div><strong>Assistance</strong></div>
-                    <li><div>blind_spot_monitoring: {{#if blind_spot_monitoring}} (In stock) {{/if}}</div></li>
-                    <li><div>rear_cross_traffic_alert: {{#if rear_cross_traffic_alert}} (In stock) {{/if}}</div></li>
-                    <li><div>lane_departure_warning: {{#if lane_departure_warning}} (In stock) {{/if}}</div></li>
-                    <li><div>adaptive_cruise_control: {{#if adaptive_cruise_control}} (In stock) {{/if}}</div></li>
-                    <li><div>collision_warning: {{#if collision_warning}} (In stock) {{/if}}</div></li>
-                {{/with}}
-            </ul>
-            {{/with}}
-        </section>
-        </main>
-    {{/with}}
-    <hr>
-    <ul>
-    {{#with engine}}
-        {{> title data='Engine' big=true}}
-            <li><div>type: {{type}}</div></li>
-            <li><div>displacement: {{displacement}}</div></li>
-            <li><div>horsepower: {{horsepower}}</div></li>
-            <li><div>torque: {{torque}}</div></li>
-            <br>
-        {{#with transmission}}
-                <div><strong>Transmission</strong></div>
+            </section>
+            </main>
+        {{/with}}
+        <hr>
+        <ul>
+        {{#with engine}}
+            {{> title data='Engine' big=true}}
                 <li><div>type: {{type}}</div></li>
-                <li><div>gears: {{gears:}}</div></li>
+                <li><div>displacement: {{displacement}}</div></li>
+                <li><div>horsepower: {{horsepower}}</div></li>
+                <li><div>torque: {{torque}}</div></li>
+                <br>
+            {{#with transmission}}
+                    <div><strong>Transmission</strong></div>
+                    <li><div>type: {{type}}</div></li>
+                    <li><div>gears: {{gears:}}</div></li>
+            {{/with}}
         {{/with}}
-    {{/with}}
-    </ul>
-    <hr>
-    <ul>
-    {{#with fuel_economy}}
-        {{> title data='Fuel_economy' big=true}}
-            <li><div>city: {{city}}</div></li>
-            <li><div>highway: {{highway}}</div></li>
-            <li><div>combined: {{combined}}</div></li>
-    {{/with}}
-    </ul>
-    <hr>
-    <ul>
-    {{#with price}}
-        {{> title data='Price' big=true}}
-            <li><div>base: {{base}}</div></li>
-            <li><div>destination: {{destination}}</div></li>
-           <br>
-        {{#with options:}}
-                <div><strong>Options:</strong></div>
-                <li><div>navigation: {{navigation}}</div></li>
-                <li><div>moonroof: {{moonroof}}</div></li>
-                <li><div>premium_paint: {{premium_paint}}</div></li>
+        </ul>
+        <hr>
+        <ul>
+        {{#with fuel_economy}}
+            {{> title data='Fuel_economy' big=true}}
+                <li><div>city: {{city}}</div></li>
+                <li><div>highway: {{highway}}</div></li>
+                <li><div>combined: {{combined}}</div></li>
         {{/with}}
-        {{> title data='Total: 28990' big=true}}
-    {{/with}}
-    </ul>
-</div>
+        </ul>
+        <hr>
+        <ul>
+        {{#with price}}
+            {{> title data='Price' big=true}}
+                <li><div>base: {{base}}</div></li>
+                <li><div>destination: {{destination}}</div></li>
+            <br>
+            {{#with options:}}
+                    <div><strong>Options:</strong></div>
+                    <li><div>navigation: {{navigation}}</div></li>
+                    <li><div>moonroof: {{moonroof}}</div></li>
+                    <li><div>premium_paint: {{premium_paint}}</div></li>
+            {{/with}}
+            {{> title data='Total: 28990' big=true}}
+        {{/with}}
+        </ul>
+    </div>
+</main>
 
 {{!-- 
     Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
