--- a/src/container/facebook.hbs
+++ b/src/container/facebook.hbs
@@ -2,45 +2,68 @@
 Це код container файлу для summary сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
-
-<div>
-    <main>
-        <h1>{{name}}</h1>
-        <div>
-            {{#each users}}
-            <hr>
-            <div>id: {{id}}</div>
-            <h2>{{name}}</h2>
-            <div>gender: {{gender}}</div>
-            <div>age: {{age}}</div>
-            <br>
+<main class="m-5">
+    <div>
+        <main>
+            <h1>{{name}}</h1>
             <div>
-                <h4>friends:</h4>
-                <br>
-                {{#each friends}}<br>
+                {{#each users}}
+                <hr>
                 <div>id: {{id}}</div>
-                <h5>{{name}}</h5>
+                <h2>{{name}}</h2>
                 <div>gender: {{gender}}</div>
                 <div>age: {{age}}</div>
+                <br>
                 <div>
-                    <b>mutual friends:</b>
+                    <h4>friends:</h4>
                     <br>
-                    {{#each mutual_friends}}<br>
+                    {{#each friends}}<br>
                     <div>id: {{id}}</div>
-                    <div>name: {{name}}</div>
+                    <h5>{{name}}</h5>
                     <div>gender: {{gender}}</div>
                     <div>age: {{age}}</div>
-                    <br>
-                    {{#each mutual_friends}}<br>
-                    <div>id: {{id}}</div>
-                    <div>name: {{name}}</div>
-                    <div>gender: {{gender}}</div>
-                    <div>age: {{age}}</div>
+                    <div>
+                        <b>mutual friends:</b>
+                        <br>
+                        {{#each mutual_friends}}<br>
+                        <div>id: {{id}}</div>
+                        <div>name: {{name}}</div>
+                        <div>gender: {{gender}}</div>
+                        <div>age: {{age}}</div>
+                        <br>
+                        {{#each mutual_friends}}<br>
+                        <div>id: {{id}}</div>
+                        <div>name: {{name}}</div>
+                        <div>gender: {{gender}}</div>
+                        <div>age: {{age}}</div>
+                        {{/each}}
+                        {{/each}}
+                        <br>
+                        {{#if groups}}
+                        <h4>groups:</h4>
+                        {{#each groups}}
+                        <div>id: {{id}}</div>
+                        <div>name: <b>{{name}}</b></div>
+                        <div>description: ({{description}})</div>
+                        <div>
+                            <b>members:</b>
+                            {{#each members}}
+                            <div>id: {{id}}</div>
+                            <div>name: {{name}}</div>
+                            <div>gender: {{gender}}</div>
+                            <div>age: {{age}}</div>
+                            <br>
+                            {{/each}}
+                        </div>
+                        {{/each}}
+                        {{/if}}
+                    </div>
                     {{/each}}
-                    {{/each}}
-                    <br>
-                    {{#if groups}}
+                </div>
+                <br>
+                <div>{{#if groups}}
                     <h4>groups:</h4>
+
                     {{#each groups}}
                     <div>id: {{id}}</div>
                     <div>name: <b>{{name}}</b></div>
@@ -60,31 +83,9 @@
                 </div>
                 {{/each}}
             </div>
-            <br>
-            <div>{{#if groups}}
-                <h4>groups:</h4>
-
-                {{#each groups}}
-                <div>id: {{id}}</div>
-                <div>name: <b>{{name}}</b></div>
-                <div>description: ({{description}})</div>
-                <div>
-                    <b>members:</b>
-                    {{#each members}}
-                    <div>id: {{id}}</div>
-                    <div>name: {{name}}</div>
-                    <div>gender: {{gender}}</div>
-                    <div>age: {{age}}</div>
-                    <br>
-                    {{/each}}
-                </div>
-                {{/each}}
-                {{/if}}
-            </div>
-            {{/each}}
-        </div>
-    </main>
-</div>
+        </main>
+    </div>
+</main>
 
 {{!-- 
     Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
