--- a/src/container/task22.hbs
+++ b/src/container/task22.hbs
@@ -1,6 +1,6 @@
 
 
-<main>
+<main class="m-5">
     {{#with page_header}}
         <h1 class="text-center">{{title}}</h1>
         <p class="text-muted text-uppercase text-center">{{description}}</p>
