--- a/src/container/web.hbs
+++ b/src/container/web.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
 
-<div>
+<div class="m-5">
    <h1>Web</h1>
 <br>
 <h2>Languages</h2>
