--- a/src/container/education.hbs
+++ b/src/container/education.hbs
@@ -2,30 +2,31 @@
 Це код container файлу для summary сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
+<main class="m-5">
+    <div>
+        {{#with main}}
+        <main>
+            <section>
+                {{> title data="My educations" big=true}}
+                <ul>
+                    {{#each educations}}
+                        <li> {{name}} {{#unless isEnd}} (ще в процесі) {{/unless}} </li>
+                    {{/each}}
+                </ul>
+        </section>
 
-<div>
-    {{#with main}}
-    <main>
         <section>
-            {{> title data="My educations" big=true}}
-            <ul>
-                {{#each educations}}
-                    <li> {{name}} {{#unless isEnd}} (ще в процесі) {{/unless}} </li>
-                {{/each}}
-            </ul>
-       </section>
-
-       <section>
-            {{> title data="My certificates"}}
-            <ul>
-                {{#each certificates}}
-                    <li> {{name}} ({{id}}) </li>
-                {{/each}}
-            </ul>
-       </section>
-    </main>
-    {{/with}}
+                {{> title data="My certificates"}}
+                <ul>
+                    {{#each certificates}}
+                        <li> {{name}} ({{id}}) </li>
+                    {{/each}}
+                </ul>
+        </section>
+        </main>
+        {{/with}}
     </div>
+</main>
 
 {{!-- 
     Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
