--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,11 +1,48 @@
-{{!-- 
-Це код container файлу для index сторінки, 
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
- --}}
-
-<h1>Hello world</h1>
-
-{{!-- 
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
---}}
+<main class="m-5">
+    <div class="card mb-5">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-6">
+                    <h3>Anatoliy Tymchuk</h3>
+                </div>
+                <div class="col-6">
+                    <h3 class="text-end">Resume project</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="mt-5 mb-5">
+        <div class="mb-4"><h2>Cписок сторінок</h2></div>
+        <p class="text-muted mb-5">Що таке сфера IT (Information Technology)? Інформаційні технології та зв'язок - це галузь, 
+            яка відповідає за збір, зберігання і передачу інформації за допомогою технічних пристроїв і,
+             в цілому, за спілкування людей на відстані. Справжній бум інформаційних технологій відбувся 
+             в 1990-і у зв'язку з поширенням персональних комп'ютерів, мережі інтернет і персональних 
+             мобільних телефонів. Сьогодні приблизно 89% молодих людей постійно користуються інтернетом і мобільними телефонами.
+        </p>
+    </section>
+    <div class="mt-5">
+        <div class="row">
+            <div class="col-12">
+                <div class="d-grid gap-1">
+                    <div><a href="/education"> <button class="btn btn-primary btn-block col-2" >Education</button></a></div>
+                    <div><a href="/facebook"> <button class="btn btn-primary btn-block col-2" >Facebook</button></a></div>
+                    <div><a href="/js"> <button class="btn btn-primary btn-block col-2" >Js</button></a></div>
+                    <div><a href="/mac"> <button class="btn btn-primary btn-block col-2" >Mac</button></a></div>
+                    <div><a href="/person"> <button class="btn btn-primary btn-block col-2" >Person</button></a></div>
+                    <div><a href="/program"> <button class="btn btn-primary btn-block col-2" >Program</button></a></div>
+                    <div><a href="/shopcart"> <button class="btn btn-primary btn-block col-2" >Shopcart</button></a></div>
+                    <div><a href="/shophome"> <button class="btn btn-primary btn-block col-2" >Shophome</button></a></div>
+                    <div><a href="/shoporder"> <button class="btn btn-primary btn-block col-2" >Shoporder</button></a></div>
+                    <div><a href="/shopreview"> <button class="btn btn-primary btn-block col-2" >Shopreview</button></a></div>
+                    <div><a href="/skills"> <button class="btn btn-primary btn-block col-2" >Skills</button></a></div>
+                    <div><a href="/summary"> <button class="btn btn-primary btn-block col-2" >Summary</button></a></div>
+                    <div><a href="/task21"> <button class="btn btn-primary btn-block col-2" >Task21</button></a></div>
+                    <div><a href="/task22"> <button class="btn btn-primary btn-block col-2" >Task22</button></a></div>
+                    <div><a href="/task31"> <button class="btn btn-primary btn-block col-2" >Task31</button></a></div>
+                    <div><a href="/web"> <button class="btn btn-primary btn-block col-2" >Web</button></a></div>
+                    <div><a href="/work"> <button class="btn btn-primary btn-block col-2" >Work</button></a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
