--- a/src/layout/index1.hbs
+++ b/src/layout/index1.hbs
@@ -12,8 +12,10 @@
 			integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+      
+      <link href='css/index1.css' rel='stylesheet' />
 
-      <link href='css/index.css' rel='stylesheet' />
+      
 
       
   </head>
@@ -24,6 +26,7 @@
     {{{body}}}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
   </body>
 
   
