--- a/public/css/index1.css
+++ b/public/css/index1.css
@@ -1,5 +1,5 @@
-:root {
-  background: purple;
+/* :root {
+  background: rgb(0, 9, 128);
 }
 
 html {
@@ -53,4 +53,82 @@ footer > h1 {
 
 footer em {
   color: rgb(117, 143, 100);
+} */
+
+
+.card-dark {
+  background: #e7e7e7;
 }
+
+.item {
+  color: green;
+}
+
+
+.item:last-of-type {
+  color: red;
+}
+
+.item:only-of-type {
+  color: blue;
+}
+
+.item:nth-last-child(3n+2) {
+  color: rgb(255, 230, 0);
+}
+
+strong:not(.item) {
+  color: blueviolet;
+}
+
+.input-dark {
+  background: #9f9f9f;
+}
+
+.input-dark[required] {
+  background: #ce1c1c;
+}
+
+.input-dark[type="number"] {
+  background: #1fce1c;
+}
+
+.small-img[alt~="small"] {
+  height: 500px;
+}
+
+a[rel~="external"] {
+  color: green;
+}
+
+button[class|="btn"] {
+  background: rgb(205, 205, 205);
+}
+
+a[class*="btn"] {
+  background: rgb(195, 13, 13);
+}
+
+a[class$="big"] {
+  background: rgb(53, 37, 231);
+}
+
+.btn::first-letter {
+  color: red;
+}
+
+.big-text::first-line {
+  color: red;
+}
+
+.input-dark::placeholder {
+  color: green;
+  background: blue;
+}
+
+.big-text::before, .big-text::after {
+  content: '$$$';
+  color: green;
+  background: #e8c609;
+}
+
