--- a/src/container/index1.hbs
+++ b/src/container/index1.hbs
@@ -4,7 +4,7 @@
  --}}
 
 
-<section class="p-5 box">
+{{!-- <section class="p-5 box">
     <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
 
     <h2 id="user">USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h2>
@@ -36,9 +36,45 @@
             </div>
         </div>
     </div>
-</footer>
+</footer> --}}
+
 
 {{!-- 
     Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
---}}
+    Адже наш layout/default.hbs має вже структуру HTML --}}
+
+
+{{!-- <div class="card p-5 m-5 card-dark">
+    <ul>
+        <li class="item">1</li>
+        <p class="item">2</p>
+        <article class="item">3</article>
+        <strong class="item">4</strong>
+        <strong>4</strong>
+        <li class="item">1</li>
+        <p class="item">2</p>
+        <article class="item">3</article>
+    </ul>
+</div> --}}
+
+<div class="card p-5 m-5 card-dark">
+    <input class="input-dark p-2" placeholder="This is text" required>
+    {{!-- <input class="input-dark" type="number"> --}}
+</div>
+
+<div class="card p-5 m-5 card-dark">
+    <img alt="image small card 100px" class="small-img" src="https://picsum.photos/200/300" height="100px">
+    <br>
+    <a href="https://picsum.photos/200/300" rel="external">Link</a>
+    <br>
+    <button class="btn">Click me</button>
+    <br>
+    <a class="small btn btn-secondary big" href="https://picsum.photos/200/300"></a>
+</div>
+
+<div class="card p-5 m-5 card-dark">
+    <p class="big-text">
+        ahgaiueg ipuahdgajhg <br> pshfphgdpiHSG PHSDGJ\SHDG 
+    </p>
+</div>
+
