--- a/src/container/index1.hbs
+++ b/src/container/index1.hbs
@@ -57,9 +57,9 @@
     </ul>
 </div> --}}
 
-<div class="card p-5 m-5 card-dark">
+{{!-- <div class="card p-5 m-5 card-dark">
     <input class="input-dark p-2" placeholder="This is text" required>
-    {{!-- <input class="input-dark" type="number"> --}}
+    <input class="input-dark" type="number">
 </div>
 
 <div class="card p-5 m-5 card-dark">
@@ -76,5 +76,42 @@
     <p class="big-text">
         ahgaiueg ipuahdgajhg <br> pshfphgdpiHSG PHSDGJ\SHDG 
     </p>
-</div>
+</div> --}}
 
+
+
+
+
+<div lang="fr" class="card p-5 m-5 card-dark">
+    <a class="link" href="https://support.google.com/docs/answer/7032287?hl=ru/">Click me</a>
+</div> 
+
+<div lang="en" id="test" class="card p-5 m-5 card-dark">
+    <input>
+    <span>Hello world!</span>
+    <button>Test button</button>
+</div> 
+
+<div class="p-5 m-5 card-dark">
+    <button>Test button</button>
+    <button disabled>Disabled button</button>
+</div> 
+
+<div class="p-5 m-5 card-dark">
+    <input class="inp">
+
+    <div class="mt-5">
+        <div>
+            <input type="checkbox">
+            <span>First checkbox</span>
+        </div>
+        <div>
+            <input type="checkbox">
+            <span>Second checkbox</span>
+        </div>
+    </div>
+</div> 
+
+<div class="p-5 m-5 card-dark">
+    <input type="email"  class="valid">
+</div> 
