--- a/src/container/index1.hbs
+++ b/src/container/index1.hbs
@@ -113,5 +113,12 @@
 </div> 
 
 <div class="p-5 m-5 card-dark">
-    <input type="email"  class="valid">
+    <div>
+        <input type="email" required class="valid" placeholder="test">
+        <span>Test test</span>
+    </div>
+
+    <div class="mt-5">
+        <input type="number" min="10" max="20" required class="number">
+    </div>
 </div> 
