--- a/src/container/index1.hbs
+++ b/src/container/index1.hbs
@@ -82,7 +82,7 @@
 
 
 
-<div lang="fr" class="card p-5 m-5 card-dark">
+{{!-- <div lang="fr" class="card p-5 m-5 card-dark">
     <a class="link" href="https://support.google.com/docs/answer/7032287?hl=ru/">Click me</a>
 </div> 
 
@@ -121,4 +121,4 @@
     <div class="mt-5">
         <input type="number" min="10" max="20" required class="number">
     </div>
-</div> 
+</div>  --}}
