--- a/src/container/crib.hbs
+++ b/src/container/crib.hbs
@@ -18,6 +18,8 @@
                     <div><a href="https://drive.google.com/file/d/1q5HPxEPNur69NQ5jtfiSgFcnT_iqpWOt/view"> <button class="btn btn-primary btn-block col-12" >Селектори. 1 частина</button></a></div>
                     <div><a href="https://drive.google.com/file/d/16gEOpkU2T_DeHiw-fgbP185znNeffGmv/view"> <button class="btn btn-primary btn-block col-12" >Селектори. 2 частина</button></a></div>
                     <div><a href="https://drive.google.com/file/d/1DWFAtuGYZ7SmZDs5qU1qoK0ZtNKm6gqh/view"> <button class="btn btn-primary btn-block col-12" >Селектори. 3 частина</button></a></div>
+                    <div><a href="https://drive.google.com/file/d/16lr5toyITtFghaF7KApu6_PzKg3dZlQ9/view"> <button class="btn btn-primary btn-block col-12" >Селектори. 4 частина</button></a></div>
+                    <div><a href="https://drive.google.com/file/d/1LMMquTMu1-nnqpO3L4Z64IAl-Dot5_2A/view"> <button class="btn btn-primary btn-block col-12" >Відображення тексту</button></a></div>
                     <div><a href="https://getbootstrap.com/"> <button class="btn btn-primary btn-block col-12" >Создавайте быстрые, адаптивные сайты с помощью Bootstrap</button></a></div>
                 </div>
             </div>
